--- a/examples/simple/BUILD.bazel
+++ b/examples/simple/BUILD.bazel
@@ -2,10 +2,8 @@ load("@rules_ruby//ruby:defs.bzl", "ruby_binary")
 
 ruby_binary(
     name = "hello",
-    srcs = ["hello.rb"],
-)
-
-sh_binary(
-    name = "temp",
-    srcs = ["temp.sh"],
+    srcs = [
+        "hello.rb",
+        "lib/greeter.rb",
+    ],
 )
